# RTS-curator-recommendation-system

./: .env.example  .env.prod.example  .gitignore  Makefile  README.md  pyproject.toml
api/: __init__.py  dependencies.py  main.py
api/repositories/: __init__.py  base.py  local.py
api/routers/: __init__.py  catalog.py  competition.py  feedback.py  health.py  recommendations.py
api/schemas/: __init__.py  catalog.py  competition.py  feedback.py  recommendations.py
api/services/: __init__.py  competition_service.py  recommendation_service.py
docs/: API.md  API_USAGE.md  APP.md  CLI.md  COMPETITION_SCRAPING.md  CTS_HYPERPARAMETERS.md  DEVELOPMENT.md  IMITATION_LEARNING.md  INTERACTIVE_TESTING.md  PIPELINE.md  TESTING.md  TMDB_ENRICHMENT.md  WHATSON_CATALOG.md  WHATSON_EXTRACTION.md
experiments/notebooks/: CTS_testing.ipynb  IL_testing.ipynb  historical_programming.ipynb  trying_functions.ipynb  visualize_competition_reward.ipynb  whatson_data.ipynb
src/cts_recommender/: RTS_constants.py  __init__.py  logging_setup.py  settings.py
src/cts_recommender/adapters/tmdb/: client.py  tmdb.py
src/cts_recommender/cli/: IL_training_data.py  historical_programming.py  interactive_cts_testing.py  prepare_programming.py  train_audience_ratings.py  train_cts_model.py  train_curator_model.py  whatson_extraction.py
src/cts_recommender/competition/: M6.py  TF1.py  competition_processing.py  competition_scraping.py  competitor.py
src/cts_recommender/environments/: TV_environment.py  reward.py  schemas.py
src/cts_recommender/environments/reward_components/: diversity.py
src/cts_recommender/features/: TV_programming_Rdata_schema.py  catalog_schema.py  schemas.py  tmdb_extract.py  whatson_csv_schema.py  whatson_schema.py
src/cts_recommender/imitation_learning/: IL_constants.py  IL_training.py  times_shown_tracker.py
src/cts_recommender/interactive/: __init__.py  interactive_testing.py
src/cts_recommender/io/: __init__.py  readers.py  writers.py
src/cts_recommender/models/: audience_ratings_regressor.py  contextual_thompson_sampler.py  curator_logistic_regressor.py  training.py
src/cts_recommender/models/audience_regression/: audience_ratings_regressor.py
src/cts_recommender/pipelines/: CTS_warmstart_training_pipeline.py  IL_training_data_pipeline.py  audience_ratings_regression_pipeline.py  historical_programming_pipeline.py  programming_pipeline.py  whatson_extraction_pipeline.py
src/cts_recommender/preprocessing/: ML_feature_processing.py  X_ML_feature_processing.py  catalog_features.py  dates.py  feature_transformations.py  historical_programming.py  movie_features.py  processing_constants.py  programming.py  whatson_constants.py  whatson_extraction.py
src/cts_recommender/utils/: interactive.py  reproducibility.py  scalers.py  text_cleaning.py  visualization.py
tests/unit/: test_catalog_features.py  test_dates.py  test_ml_feature_processing.py  test_programming.py  test_tmdb_matching.py  test_whatson_extraction.py
