[project]
name = "cts-recommender"
version = "0.1.0"
description = "Contextual movie recommender (CTS) — codebase"
readme = "README.md"
requires-python = ">=3.9,<3.13"
authors = [{ name = "Theo Maetz", email = "theo.maetz@gmail.com" }]
dependencies = [
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyreadr>=0.5.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
]

[project.scripts]
cts-reco-prepare-programming = "cts_recommender.cli.prepare_programming:main"

